--- a/haoke-project-service/haoke-manage/pom.xml
+++ b/haoke-project-service/haoke-manage/pom.xml
@@ -29,6 +29,10 @@
         <dubbo.version>2.6.4</dubbo.version>
         <zookeeper.version>3.4.13</zookeeper.version>
         <zkclient.version>0.1</zkclient.version>
+
+        <mybatis-plus.version>3.0.5</mybatis-plus.version>
+        <mysql-connector-java.version>5.1.47</mysql-connector-java.version>
+
         <commons-lang3.version>3.7</commons-lang3.version>
     </properties>
 
@@ -60,14 +64,43 @@
                 <version>${zkclient.version}</version>
             </dependency>
 
+            <!-- MyBatis-Plus 插件的依赖 -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <!-- mysql数据库连接驱动 -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector-java.version}</version>
+            </dependency>
+
             <!-- apache commons 工具类库 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+            <!-- lombok实体类工具插件 -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
 
-            <!-- 项目各个模块的版本控制 -->
+            <!--
+                *******************************
+                    项目各个模块的版本控制
+                *******************************
+            -->
+            <!-- 房源服务接口 -->
+            <dependency>
+                <groupId>com.moon</groupId>
+                <artifactId>haoke-manage-server-house-resources-interface</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
