feat: 后台服务系统工程-新增房源服务；前端工程整合新增房源服务请求

--- a/haoke-project-service/haoke-manage/haoke-manage-api-server/pom.xml
+++ b/haoke-project-service/haoke-manage/haoke-manage-api-server/pom.xml
@@ -20,6 +20,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- dubbo服务接口的依赖 -->
+        <dependency>
+            <groupId>com.moon</groupId>
+            <artifactId>haoke-manage-server-house-resources-interface</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
