--- a/haoke-project-service/haoke-manage/haoke-manage-api-server/pom.xml
+++ b/haoke-project-service/haoke-manage/haoke-manage-api-server/pom.xml
@@ -26,6 +26,24 @@
             <groupId>com.moon</groupId>
             <artifactId>haoke-manage-server-house-resources-interface</artifactId>
         </dependency>
+
+        <!-- 阿里云oss sdk包依赖 -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>2.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+        <!-- 阿里云oss sdk包依赖 -->
     </dependencies>
 
 </project>
