feat: GraphQL 入门示例

--- a/haoke-technology-stack-sample/pom.xml
+++ b/haoke-technology-stack-sample/pom.xml
@@ -21,6 +21,7 @@
     <modules>
         <module>sample-dubbo</module>
         <module>sample-mybatis-plus</module>
+        <module>sample-graphql-java</module>
     </modules>
 
 </project>
